--- a/Tutorial/Tut_08_Socket_io/client/index.html
+++ b/Tutorial/Tut_08_Socket_io/client/index.html
@@ -1,55 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        body{
-            margin: 0 auto;
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            height: 100vh;
-            width: 90%;
-            max-width: 1200px;
-        }
-        #message-container{
-            border: 2px solid black;
-            flex-grow: 1;
-            overflow-y: auto;
-            margin: 10px;
-        }
-        #message-container div{
-            background-color: #CCC;
-            padding: 5px;
-        }
-        form{
-            display: flex;
-            flex-direction: column;
-        }
-        form div{
-            display: flex;
-            justify-content: space-between;
-            margin: 10px;
-        }
+      body {
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        height: 100vh;
+        width: 90%;
+        max-width: 1200px;
+      }
+      #message-container {
+        border: 2px solid black;
+        flex-grow: 1;
+        overflow-y: auto;
+        margin: 10px;
+      }
+      #message-container div {
+        background-color: #ccc;
+        padding: 5px;
+      }
+      form {
+        display: flex;
+        flex-direction: column;
+      }
+      form div {
+        display: flex;
+        justify-content: space-between;
+        margin: 10px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div id="message-container"></div>
     <form id="form">
-        <div >
-            <label for="message-input" style="font-size: 30px;">Message:</label>
-            <input type="text" id="message-input" style="height:30px;width:75%;">
-            <button type="submit" id="send-button" style="height: 35px; width: 10%;">Send</button> 
-        </div>
-        <div>
-            <label for="room-input" style="font-size: 30px;">Room: &nbsp &nbsp</label>
-            <input type="text" id="room-input" style="height:30px;width:75%;">
-            <button type="button" id="room-button" style="height: 35px; width: 10%;">Join</button> 
-        </div>
+      <div>
+        <label for="message-input" style="font-size: 30px">Message:</label>
+        <input
+          type="text"
+          id="message-input"
+          style="height: 30px; width: 75%"
+        />
+        <button type="submit" id="send-button" style="height: 35px; width: 10%">
+          Send
+        </button>
+      </div>
+      <div>
+        <label for="room-input" style="font-size: 30px"
+          >Room: &nbsp &nbsp</label
+        >
+        <input type="text" id="room-input" style="height: 30px; width: 75%" />
+        <button type="button" id="room-button" style="height: 35px; width: 10%">
+          Join
+        </button>
+      </div>
     </form>
-    <script src="script.js"></script>
-</body>
+    <script type="module" src="./script.js"></script>
+  </body>
 </html>
