--- a/Tutorial/Tut_10_nodemailer/public/index.html
+++ b/Tutorial/Tut_10_nodemailer/public/index.html
@@ -5,8 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <style>
+      * {
+        margin: 0px;
+        padding: 0px;
+      }
+      body {
+        height: 100vh;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .container {
+        border: 1px solid black;
+        border-radius: 10px;
+        height: 300px;
+        width: 300px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+      }
+      .container form {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+      }
+      .container form input {
+        margin-bottom: 10px;
+      }
+    </style>
   </head>
   <body>
-    <h1>Hello</h1>
+    <div class="container">
+      <h1>Register</h1>
+      <form action="/register" method="post">
+        <input type="text" placeholder="email" name="email" id="email" />
+        <button type="submit">Register</button>
+      </form>
+    </div>
   </body>
 </html>
